Revert Bug 1962707 and Bug 1955433 for failing browser-chrome's browser_914138_widget_API_overflowable_toolbar.js
This reverts commit bb08da24faaeeb43f486b94d3960086482750cba.

This reverts commit 16ee4c251e6db482e8c0c4bc1b053daf0a6b166f.

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -437,11 +437,9 @@ body {
   }
 }
 
-#vertical-spacer {
-  min-width: 20px;
-
-  /* stylelint-disable-next-line media-query-no-invalid */
-  @media not -moz-pref("sidebar.verticalTabs") {
+/* stylelint-disable-next-line media-query-no-invalid */
+@media not -moz-pref("sidebar.verticalTabs") {
+  #vertical-spacer {
     display: none;
   }
 }
