--- a/browser/themes/shared/toolbarbuttons.css
+++ b/browser/themes/shared/toolbarbuttons.css
@@ -640,7 +640,7 @@ toolbarspring {
   min-width: 28px;
   max-width: 112px;
 
-  #nav-bar &:not(#vertical-spacer) {
+  #nav-bar & {
     flex: 80 80;
     /* Ensure flexible spacers don't shrink to nothing so they can be
      * manipulated in customize mode. */
@@ -648,7 +648,7 @@ toolbarspring {
   }
 }
 
-#nav-bar:not([customizing]) toolbarspring:not(#vertical-spacer) {
+#nav-bar:not([customizing]) toolbarspring {
   /* Allow flexible spacers to shrink further outside of customize mode. */
   min-width: 1px;
 }
